--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "postcss": "^8.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-type-animation": "^2.1.1",
     "sass": "^1.54.8",
     "tailwindcss": "^3.1.8"
   }
