--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "buid": "next build",
+    "start": "next start",
+    "export": "next build && next export"
   },
   "dependencies": {
     "autoprefixer": "^10.4.8",
