--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.8",
     "next": "^12.2.5",
     "postcss": "^8.4.16",
+    "rc-progress": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
